[package]
name = "bevy_fps"
version = "0.1.0"
edition = "2021"
description = "A fist person shooter plugin for bevy"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Strange-Knoll/bevy_fps_controller"
repository = "https://github.com/Strange-Knoll/bevy_fps_controller"
keywords = ["gamedev", "bevy", "rapier"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.0"
bevy_rapier3d = { version = "0.27.0", features = ["simd-stable"] }
